@@ -1,3 +1,9 @@
+2007-07-07	kaffeetisch
+
+	* GObject.xs: Register G_TYPE_INTERFACES as Glib::Interfaces to
+	avoid having it appear under Glib::Object::_Unregistered in
+	hierarchies in the generated POD.
+
 2007-06-24	kaffeetisch
 
 	* Glib.pm, NEWS, README: Unstable release 1.151.
